2012-07-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.c (trie_state_get_data):
	Check if the state is leaf, not just suffix, before getting data.

	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.

2012-07-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/tail.h, datrie/tail.c:
	* datrie/alpha-map.c:
	* datrie/trie.h, datrie/trie.c:
	* datrie/darray.c: Remove trailing spaces.

2012-07-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/tail.c (tail_get_suffix): Fix function documentation.

	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.

2012-07-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/darray.c, datrie/tail.c:
	  - Don't include <stdint.h> when compiled with MSVC, as the header is
	    missing there, and SIZE_MAX is provided in some other header.

	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.

2012-07-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2011-11-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.5 ===

2011-08-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/alpha-map.h: Add missing 'extern "C"' for export functions
	to fix problem with C++ compiler.
	Thanks Aurimas Černius <aurisc4@gmail.com> for the patch.

2011-03-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.
	* datrie/trie.h: Add missing documentation for "user_data" parameter
	in TrieEnumFunc.

2010-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.4 ===

2010-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/alpha-map-private.h, datrie/alpha-map.c:
	* datrie/darray.h, datrie/darray.c:
	* datrie/tail.h, datrie/tail.c:
	* datrie/trie.c (trie_fread, trie_fwrite):
	Rename *_read() and *_write() functions to *_fread() and *_fwrite(),